--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=YoutubeRipper
+application.vendor=mmain
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,6 +25,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/YoutubeRipper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.3.jar=lib\\commons-beanutils-1.8.3.jar
 file.reference.commons-codec-1.6.jar=lib\\commons-codec-1.6.jar
@@ -41,7 +43,9 @@ file.reference.jackson-core-2.1.1.jar=lib\\jackson-core-2.1.1.jar
 file.reference.jackson-databind-2.1.1.jar=lib\\jackson-databind-2.1.1.jar
 file.reference.json-lib-2.4-jdk15.jar=lib\\json-lib-2.4-jdk15.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.commons-codec-1.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
@@ -81,11 +85,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=com.ytripper.YoutubeRipper
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
