Added experimental MP3 conversion support

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,7 @@ file.reference.httpmime-4.2.2.jar=lib\\httpmime-4.2.2.jar
 file.reference.jackson-annotations-2.1.1.jar=lib\\jackson-annotations-2.1.1.jar
 file.reference.jackson-core-2.1.1.jar=lib\\jackson-core-2.1.1.jar
 file.reference.jackson-databind-2.1.1.jar=lib\\jackson-databind-2.1.1.jar
+file.reference.jave-1.0.2.jar=lib\\jave-1.0.2.jar
 file.reference.json-lib-2.4-jdk15.jar=lib\\json-lib-2.4-jdk15.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.jackson-annotations-2.1.1.jar}:\
     ${file.reference.jackson-core-2.1.1.jar}:\
     ${file.reference.jackson-databind-2.1.1.jar}:\
-    ${file.reference.json-lib-2.4-jdk15.jar}
+    ${file.reference.json-lib-2.4-jdk15.jar}:\
+    ${file.reference.jave-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
